--- a/login/index.html
+++ b/login/index.html
@@ -18,18 +18,22 @@
         <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Password">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
     <br />
-    <p class="text-center">
+    <p class="text-center" id="rgstr">
       <a href="#" class="btn btn-default">Register</a>
     </p>
+  </div>
   <!--jQuery CDN-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="js/myScript.js">
+
+  </script>
 </body>
 </html>
